syntax = "proto3";

package math;

message DivArgs {
    int64 dividend = 1;
    int64 divisor = 2;
}

message DivReply {
    int64 quotient = 1;
    int64 remainder = 2;
}

message FibArgs {
    int64 limit = 1;
}

message Num {
    int64 num =1;
}

message FibReply {
    int64 count =1;
}

service Math {
    rpc Div (DivArgs) returns (DivReply) {
    }

    rpc DivMany (stream DivArgs) returns (stream DivReply) {
    }

    rpc Fib (FibArgs) returns (stream Num) {
    }

    rpc Sum (stream Num) returns (Num) {
    }
}